<resources>
    <string name="app_name">FirstApp</string>
    <string name="hello">Happy Birthday~</string>
    <string name="hint_txt">请输入摄氏度</string>
    <string name="btn1">转换为华氏温度</string>
    <string name="result">转换结果为：</string>
    <string name="teamA">teamA</string>
    <string name="teamB">teamB</string>
    <string name="btn21">+1 point</string>
    <string name="btn22">+2 points</string>
    <string name="btn23">+3 points</string>
    <string name="btn24">resit</string>
    <string name="score">0</string>


    <string name="rmb_hint">Input RMB</string>

    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>
    <string name="won">Won</string>
    <string name="btn_open_lable">Config</string>
    <string name="btn_save_lable">Save</string>
    <string name="huilv">汇率转换</string>
    <string name="menu_set_lable">setting</string>
    <string name="setting">setting</string>
    <string name="label_open_list">OpenList</string>
    <string name="textview">TextView</string>
    <string name="text1_hint">请输入诗词</string>
    <string name="welcome">欢迎使用飞花令！</string>
    <string name="bg1_pic">bg1_pic</string>
    <string name="wel_btn">开始查询</string>
    <string name="final_inp_hint">请输入要查询的诗词</string>
    <string name="final_second_btn">查询</string>
    <string name="feihualing">飞花令</string>

</resources>
