<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Final_WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/bg1_pic"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/bg2" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="64dp"
        android:text="@string/welcome"
        android:textSize="36sp"
        android:layout_marginStart="72dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="500dp"
        android:layout_marginRight="130dp"
        android:onClick="openOne"
        android:text="@string/wel_btn"
        android:textColor="@color/design_default_color_background"
        android:textSize="16sp" />

</RelativeLayout>