<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Final_SecondActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feihualing" />

    <EditText
        android:id="@+id/final_inp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/final_inp_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/final_second_btn"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_background" />

    <TextView
        android:id="@+id/final_out"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>